--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Project: Recipes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-        <li><a href="recipes/chicken-wings.html">Restaurant-Style Buffalo Chicken Wings</a></li>
-        <li><a href="recipes/pho.html">Authentic Homemade Pho</a></li>
-    </ul>
+    <div class="header">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div class="main-content">
+        <ul>
+            <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="recipes/chicken-wings.html">Restaurant-Style Buffalo Chicken Wings</a></li>
+            <li><a href="recipes/pho.html">Authentic Homemade Pho</a></li>
+        </ul>
+    </div>
 </body>
 </html>
